--- a/Assets/Scripts/Plant/Plant.asmdef
+++ b/Assets/Scripts/Plant/Plant.asmdef
@@ -2,7 +2,7 @@
     "name": "Plant",
     "rootNamespace": "",
     "references": [
-        "GUID:e41331459a1be774d93aa62a522d3aa9"
+        "Parameters",
         "Utils"
     ],
     "includePlatforms": [],
