Add force simulate command

--- a/Assets/Scripts/Plant/Plant.asmdef
+++ b/Assets/Scripts/Plant/Plant.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "Parameters",
-        "Utils"
+        "Utils",
+        "Debug"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
