--- a/Assets/Scripts/Gameplay/Selectable/Selectable.asmdef
+++ b/Assets/Scripts/Gameplay/Selectable/Selectable.asmdef
@@ -2,7 +2,8 @@
     "name": "Selectable",
     "rootNamespace": "",
     "references": [
-        "GUID:6cd9906e7cafdc345bc7ac1e263921d6"
+        "GUID:6cd9906e7cafdc345bc7ac1e263921d6",
+        "GUID:3efb661cce316db499bd964c9b97e8de"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
