--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.ai.navigation.components": "https://github.com/Unity-Technologies/NavMeshComponents.git#package",
     "com.unity.collab-proxy": "1.15.7",
     "com.unity.formats.alembic": "1.0.7",
     "com.unity.ide.rider": "2.0.7",
