--- a/Assets/Scripts/Gameplay/Items/Items.asmdef
+++ b/Assets/Scripts/Gameplay/Items/Items.asmdef
@@ -1,10 +1,9 @@
 {
-    "name": "Selectable",
+    "name": "Items",
     "rootNamespace": "",
     "references": [
         "GUID:6cd9906e7cafdc345bc7ac1e263921d6",
-        "GUID:3efb661cce316db499bd964c9b97e8de",
-        "GUID:3dfc11a3c67653c43908e8fbad23fb90"
+        "GUID:31054482025813340adb32a9f4c0ce85"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
