Add plant data to inventory

--- a/Assets/Scripts/Gameplay/Plant/PlantDataFetcher/PlantDataFetcher.asmdef
+++ b/Assets/Scripts/Gameplay/Plant/PlantDataFetcher/PlantDataFetcher.asmdef
@@ -1,10 +1,8 @@
 {
-    "name": "Items",
+    "name": "PlantDataFetcher",
     "rootNamespace": "",
     "references": [
-        "GUID:6cd9906e7cafdc345bc7ac1e263921d6",
-        "GUID:31054482025813340adb32a9f4c0ce85",
-        "GUID:784cc7d224a40ae46872a03ab6b537f3"
+        "GUID:0cff4f9115173094fb39ae3c95d317aa"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
