--- a/Assets/Scripts/Gameplay/Plant/Plant.asmdef
+++ b/Assets/Scripts/Gameplay/Plant/Plant.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "Parameters",
         "Utils",
-        "Debug"
+        "Debug",
+        "Items"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
