Missing asmdef reference

--- a/Assets/Scripts/UI/UI.asmdef
+++ b/Assets/Scripts/UI/UI.asmdef
@@ -5,7 +5,8 @@
         "GUID:6cd9906e7cafdc345bc7ac1e263921d6",
         "GUID:97b55c7eee36e2d419e96b4e34e14e54",
         "GUID:31054482025813340adb32a9f4c0ce85",
-        "GUID:e41331459a1be774d93aa62a522d3aa9"
+        "GUID:e41331459a1be774d93aa62a522d3aa9",
+        "GUID:0cff4f9115173094fb39ae3c95d317aa"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
