Add pruning functionality

--- a/Assets/Scripts/Gameplay/Plant/Plant.asmdef
+++ b/Assets/Scripts/Gameplay/Plant/Plant.asmdef
@@ -5,7 +5,8 @@
         "Parameters",
         "Utils",
         "Debug",
-        "Items"
+        "Items",
+        "Core"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
