--- a/Assets/Scripts/UI/UI.asmdef
+++ b/Assets/Scripts/UI/UI.asmdef
@@ -6,7 +6,8 @@
         "GUID:97b55c7eee36e2d419e96b4e34e14e54",
         "GUID:31054482025813340adb32a9f4c0ce85",
         "GUID:e41331459a1be774d93aa62a522d3aa9",
-        "GUID:0cff4f9115173094fb39ae3c95d317aa"
+        "GUID:0cff4f9115173094fb39ae3c95d317aa",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
